# testownik-tauri

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
squashfs-root/: .DirIcon  testownik-app.desktop
squashfs-root/usr/lib/: libFcitx5GClient.so.2  libXcomposite.so.1  libXdamage.so.1  libXext.so.6  libXfixes.so.3  libXinerama.so.1  libXrandr.so.2  libatk-1.0.so.0  libatk-bridge-2.0.so.0  libatomic.so.1  libatspi.so.0  libavahi-client.so.3  libavahi-common.so.3  libavif.so.16  libblkid.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbrotlienc.so.1  libcanberra-gtk3.so.0  libcanberra.so.0  libcloudproviders.so.0  libcolord.so.2  libcups.so.2  libdatrie.so.1  libdav1d.so.7  libdw.so.1  libelf.so.1  libenchant-2.so.2  libevdev.so.2  libffi.so.8  libgcrypt.so.20  libgdk-3.so.0  libgdk_pixbuf-2.0.so.0  libgio-2.0.so.0  libgnutls.so.30  (+64 more)
src/: App.css  App.tsx  api.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/bazy/komuna/Komunistyczny testownik/: 03.txt  05.txt  06.txt  101.txt  105.txt  12.txt  13.txt  15.txt  18.txt  20.txt  21.txt  22.txt  23.txt  24.txt  26.txt  27.txt  30.txt  31.txt  36.txt  37.txt  38.txt  41.txt  42.txt  43.txt  44.txt  47.txt  49.txt  51.txt  56.txt  58.txt  59.txt  60.txt  64.txt  66.txt  67.txt  68.txt  70.txt  73.txt  74.txt  80.txt  (+8 more)
src-tauri/resources/bazy/pair/baza/: 139.txt
src-tauri/resources/data/: bases.json  komuna.json  pair.json  telekomuna-new.json
src-tauri/src/: import_export.rs  lib.rs  main.rs
(+91 files in other folders)
